# jotta

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  README.md  bun.lockb  drizzle.config.ts  eslint.config.mjs  next.config.js  package-lock.json  package.json  prettier.config.js  pyproject.toml  start-database.sh  stop-database.sh  tailwind.config.ts
.cursor/rules/: background.mdc  contributions.mdc
.github/workflows/: ci.yml  cleanup-preview.yml  deploy-preview.yml  deploy-production.yml  preview-production-build.yml
docs/: Jotta.ai.md  Welcome.md  privacy-policy.mdx  terms-of-service.mdx
docs/.obsidian/: workspace.json
docs/proompts/: Exploration.md
drizzle/: 0000_friendly_layla_miller.sql  0000_superb_random.sql  0001_complex_mandroid.sql  0001_wealthy_senator_kelly.sql  0002_solid_wasp.sql  0003_puzzling_invisible_woman.sql  0004_cultured_kylun.sql  0005_violet_omega_red.sql  0006_reflective_mysterio.sql  0007_striped_ronan.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
ml/: deploy.py  router.py  stop.py  utils.py
ml/apps_v2/: utils.py
ml/modal/: README.md  deploy.py  stop.py  utils.py
ml/research/: README.md  analyse_vocab_frequency.py  models.py
modal_api/: deploy.py  router.py  stop.py  utils.py
scripts/db/: start-database.sh  stop-database.sh
src/: env.js  middleware.ts
src/app/: error.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
src/blog/: jotta-stack.mdx  (+1 more)
(+231 files in other folders)
